--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SKIP_PREFLIGHT_CHECK=true
+# SKIP_PREFLIGHT_CHECK=true
 
 REACT_APP_API_URL=https://task-management-system-kwt1.onrender.com/tasks/
 REACT_APP_API_KEY=xxx
-NODE_OPTIONS=--openssl-legacy-provider
+# NODE_OPTIONS=--openssl-legacy-provider
 PORT=3000
